docs(stage-9): update README, RUNBOOK and stage tracking for stage 9
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>